--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ main {
 .hero {
   display: flex;
   flex-direction: row;
-  margin-top: 12rem;
+  margin-top: 10rem;
 }
 
 .hero-left {
@@ -187,6 +187,7 @@ input[type="email"] {
   max-height: 500px;
   margin: auto;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .section1 {
@@ -634,7 +635,19 @@ footer {
   background: url(https://raw.githubusercontent.com/itsflamy/freecodecamp-product-landing-page/afccc5a78c43de6a6e50a5ddbd5ee4288e78106c/images/background-footer.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  border-bottom: 10px solid var(--primary);
+  position: relative;
+}
+  
+footer::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0; 
+  left: 0; 
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(125deg, #4a37c3 0%, #70c6cb 34%, #ff56da 68%, #75002a 100%);
+  z-index: 1;
 }
 
 .footer-top {
